--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -64,26 +64,18 @@
           </div>
         }
         <div class="fx-row-start-center fx-gap-5" >
-          <mat-form-field class="fx-flex-fill">
-            <mat-label>{{ 'code-model.prompt' | translate }}</mat-label>
-            <mat-select [(value)]="varCoding.codeModel">
-              <mat-option [value]="'CHOICE'">
-                {{'code-model.CHOICE' | translate}}
-              </mat-option>
-              <mat-option [value]="'VALUE_LIST'">
-                {{'code-model.VALUE_LIST' | translate}}
-              </mat-option>
-              <mat-option [value]="'NUMBER'">
-                {{'code-model.NUMBER' | translate}}
-              </mat-option>
-              <mat-option [value]="'MANUAL'">
-                {{'code-model.MANUAL' | translate}}
-              </mat-option>
-              <mat-option [value]="'NONE'">
-                {{'code-model.NONE' | translate}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
+          <mat-button-toggle-group
+            class="fx-flex-fill"
+            name="ingredients"
+            [(value)]="varCoding.codeModel"
+            hideSingleSelectionIndicator="true"
+          >
+            <mat-button-toggle [value]="'NONE'" [matTooltip]="'code-model.NONE' | translate"><mat-icon>vertical_split</mat-icon></mat-button-toggle>
+            <mat-button-toggle [value]="'RULES_ONLY'" [matTooltip]="'code-model.RULES_ONLY' | translate"><mat-icon>reorder</mat-icon></mat-button-toggle>
+            <mat-button-toggle [value]="'MANUAL_ONLY'" [matTooltip]="'code-model.MANUAL_ONLY' | translate">
+              <mat-icon><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Z"/></svg></mat-icon>
+            </mat-button-toggle>
+          </mat-button-toggle-group>
           <button mat-icon-button (click)="smartSchemer()"
             [matTooltip]="'click.smart-schemer' | translate">
             <mat-icon><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"/></svg></mat-icon>
