--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -63,10 +63,48 @@
             </div>
           </div>
         }
-        <div class="fx-row-start-center fx-gap-5" >
+        <div class="fx-row-start-start fx-gap-5" >
+          @if (schemerService.userRole === 'RW_MAXIMAL') {
+            <button mat-icon-button
+                    [matMenuTriggerFor]="menuNew"
+                    [matTooltip]="'code.prompt.add' | translate"
+                    matTooltipPosition="above">
+              <mat-icon>add</mat-icon>
+            </button>
+          }
+          <mat-menu #menuNew>
+            <button mat-menu-item (click)="addCode('FULL_CREDIT')">
+              <mat-icon style="color: limegreen">done_all</mat-icon>
+              {{'code.prompt.add-score1' | translate}}
+            </button>
+            <button mat-menu-item (click)="addCode('PARTIAL_CREDIT')">
+              <mat-icon style="color: green">check</mat-icon>
+              {{'code.prompt.add-score-partial' | translate}}
+            </button>
+            <button mat-menu-item (click)="addCode('NO_CREDIT')">
+              <mat-icon style="color: gold">remove_done</mat-icon>
+              {{'code.prompt.add-score0' | translate}}
+            </button>
+            <mat-divider></mat-divider>
+            <button mat-menu-item (click)="addCode('RESIDUAL')">
+              <mat-icon>close</mat-icon>
+              {{'code.prompt.add-residual' | translate}}
+            </button>
+            <button mat-menu-item (click)="addCode('RESIDUAL_AUTO')">
+              <mat-icon style="color: orangered">close</mat-icon>
+              {{'code.prompt.add-residual-auto' | translate}}
+            </button>
+            <mat-divider></mat-divider>
+            <button mat-menu-item (click)="addCode('UNSET')">
+              <mat-icon><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#2854C5"><path d="M424-320q0-81 14.5-116.5T500-514q41-36 62.5-62.5T584-637q0-41-27.5-68T480-732q-51 0-77.5 31T365-638l-103-44q21-64 77-111t141-47q105 0 161.5 58.5T698-641q0 50-21.5 85.5T609-475q-49 47-59.5 71.5T539-320H424Zm56 240q-33 0-56.5-23.5T400-160q0-33 23.5-56.5T480-240q33 0 56.5 23.5T560-160q0 33-23.5 56.5T480-80Z"/></svg></mat-icon>
+              {{'code.prompt.add-any' | translate}}
+            </button>
+          </mat-menu>
+          <button mat-icon-button (click)="smartSchemer()"
+                  [matTooltip]="'click.smart-schemer' | translate">
+            <mat-icon><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"/></svg></mat-icon>
+          </button>
           <mat-button-toggle-group
-            class="fx-flex-fill"
-            name="ingredients"
             [(value)]="varCoding.codeModel"
             hideSingleSelectionIndicator="true"
           >
@@ -76,10 +114,6 @@
               <mat-icon><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Z"/></svg></mat-icon>
             </mat-button-toggle>
           </mat-button-toggle-group>
-          <button mat-icon-button (click)="smartSchemer()"
-            [matTooltip]="'click.smart-schemer' | translate">
-            <mat-icon><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"/></svg></mat-icon>
-          </button>
           <button mat-icon-button (click)="codingAsText()" [matTooltip]="'click.coding-as-text' | translate">
             <mat-icon>description</mat-icon>
           </button>
