Add listing of processing options in var-codings

--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/var-codes-full.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/var-codes-full.component.html
@@ -1,14 +1,9 @@
 <div class="fx-column-start-stretch">
   <div class="fx-columns">
-    <div class="fx-row-space-between-start">
-      <codes-title [codeList]="codes" (codesChanged)="codesChanged.emit(codes)"></codes-title>
-      <mat-form-field [matTooltip]="'fragmenting.tooltip' | translate">
-        <mat-label>{{ 'fragmenting.prompt' | translate }}</mat-label>
-        <input matInput
-               [(ngModel)]="fragmenting"
-               (ngModelChange)="fragmentingChanged.emit(fragmenting)">
-      </mat-form-field>
-    </div>
+    <codes-title [codeList]="codes"
+                 [fragmenting]="fragmenting"
+                 [processing]="processing"
+                 (codesChanged)="codesChanged.emit(codes)"></codes-title>
     <div class="processing">
       <mat-checkbox [checked]="processing ? (processing.indexOf('IGNORE_CASE') >= 0) : false"
         (change)="alterProcessing('IGNORE_CASE', $event.checked)">
