--- a/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
@@ -1,28 +1,78 @@
-<div class="fx-row-start-stretch code fx-gap-10" [style.max-height.px]="500" >
+<div class="fx-row-start-stretch code fx-gap-10">
   @if (code) {
-    <div class="fx-column-start-stretch " [style.width.%]="60">
-        <div  class="code-main-data fx-row-start-center">
-          @if (code.id === null) {
-            <div class="fx-flex-fill" [style.padding-left.px]="8">
-              <p>{{'code.is-null' | translate}}</p>
-            </div>
-            @if (enableSwitchNull) {
-              <button mat-icon-button [style.width.px]="50"
-                      (click)="setCodeValid()"
-                      [matTooltip]="'code.make-not-null' | translate">
-                <mat-icon>do_not_disturb_off</mat-icon></button>
-            }
-          }
-          @if (code.id !== null) {
-            <mat-form-field [class]="codeIdIsUnique(code.id, codeIndex) ? 'unique-id' : 'not-unique-id'" [style.width.px]="80">
-              <mat-label>{{'code.id' | translate}}</mat-label>
+    <button mat-icon-button [matMenuTriggerFor]="selectCodeType">
+      @if (code.type === 'FULL_CREDIT') {
+        <mat-icon style="color: limegreen">done_all</mat-icon>
+      } @else if (code.type === 'PARTIAL_CREDIT') {
+        <mat-icon style="color: green">check</mat-icon>
+      } @else if (code.type === 'NO_CREDIT') {
+        <mat-icon style="color: gold">remove_done</mat-icon>
+      } @else if (code.type === 'UNSET') {
+        <mat-icon style="color: blue"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M424-320q0-81 14.5-116.5T500-514q41-36 62.5-62.5T584-637q0-41-27.5-68T480-732q-51 0-77.5 31T365-638l-103-44q21-64 77-111t141-47q105 0 161.5 58.5T698-641q0 50-21.5 85.5T609-475q-49 47-59.5 71.5T539-320H424Zm56 240q-33 0-56.5-23.5T400-160q0-33 23.5-56.5T480-240q33 0 56.5 23.5T560-160q0 33-23.5 56.5T480-80Z"/></svg></mat-icon>
+      } @else if (code.type === 'RESIDUAL') {
+        <mat-icon>close</mat-icon>
+      } @else if (code.type === 'RESIDUAL_AUTO') {
+        <mat-icon style="color: orangered">close</mat-icon>
+      }
+    </button>
+    <mat-menu #selectCodeType>
+      <button mat-menu-item (click)="code.type = 'FULL_CREDIT'">
+        <mat-icon style="color: limegreen">done_all</mat-icon>
+        {{'code.prompt.add-FULL_CREDIT' | translate}}
+      </button>
+      <button mat-menu-item (click)="code.type = 'PARTIAL_CREDIT'">
+        <mat-icon style="color: green">check</mat-icon>
+        {{'code.prompt.add-PARTIAL_CREDIT' | translate}}
+      </button>
+      <button mat-menu-item (click)="code.type = 'NO_CREDIT'">
+        <mat-icon style="color: gold">remove_done</mat-icon>
+        {{'code.prompt.add-NO_CREDIT' | translate}}
+      </button>
+      <button mat-menu-item (click)="code.type = 'UNSET'">
+        <mat-icon style="color: blue"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M424-320q0-81 14.5-116.5T500-514q41-36 62.5-62.5T584-637q0-41-27.5-68T480-732q-51 0-77.5 31T365-638l-103-44q21-64 77-111t141-47q105 0 161.5 58.5T698-641q0 50-21.5 85.5T609-475q-49 47-59.5 71.5T539-320H424Zm56 240q-33 0-56.5-23.5T400-160q0-33 23.5-56.5T480-240q33 0 56.5 23.5T560-160q0 33-23.5 56.5T480-80Z"/></svg></mat-icon>
+        {{'code.prompt.add-UNSET' | translate}}
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-menu-item (click)="code.type = 'RESIDUAL'" [disabled]="residualExists(code.type)">
+        <mat-icon>close</mat-icon>
+        {{'code.prompt.add-RESIDUAL' | translate}}
+      </button>
+      <button mat-menu-item (click)="code.type = 'RESIDUAL_AUTO'" [disabled]="residualExists(code.type)">
+        <mat-icon style="color: orangered">close</mat-icon>
+        {{'code.prompt.add-RESIDUAL_AUTO' | translate}}
+      </button>
+    </mat-menu>
+    <div class="fx-column-start-stretch " [style.width.%]="codeModel === 'NONE' ? 60 : 100">
+      <div class="code-main-data fx-row-start-center fx-gap-5">
+        @if (code.id === null) {
+          <div class="fx-flex-fill" [style.padding-left.px]="8">
+            <p>{{'code.is-null' | translate}}</p>
+          </div>
+          <button mat-icon-button [style.width.px]="50"
+                  (click)="setCodeValid()"
+                  [matTooltip]="'code.make-not-null' | translate">
+            <mat-icon>do_not_disturb_off</mat-icon></button>
+        }
+        @if (code.id !== null) {
+          <mat-form-field [class]="codeIdIsUnique(code.id, codeIndex) ? 'unique-id' : 'not-unique-id'" [style.width.px]="80">
+            <mat-label>{{'code.id' | translate}}</mat-label>
+            <input matInput
+                   required
+                   [(ngModel)]="code.id"
+                   (ngModelChange)="setCodeChanged()"
+                   type="number">
+          </mat-form-field>
+          <div class="fx-flex-fill fx-row-center-center">
+            <div class="fx-flex-row-50">{{'code.prompt.add-' + code.type | translate}}</div>
+            <mat-form-field class="fx-flex-row-50">
+              <mat-label>{{'code.description' | translate}}</mat-label>
               <input matInput
-                     required
-                     [(ngModel)]="code.id"
-                     (ngModelChange)="setCodeChanged()"
-                     type="number">
+                     [placeholder]="'code.description' | translate"
+                     [(ngModel)]="code.label"
+                     (ngModelChange)="setCodeChanged()">
             </mat-form-field>
-            <div>{{code.type}}</div>
+          </div>
+          @if (!['RESIDUAL', 'RESIDUAL_AUTO', 'NO_CREDIT'].includes(code.type)) {
             <mat-form-field
               [class]="code.score > 0 ? 'correct' : 'not-correct'"
               [style.width.px]="100">
@@ -33,27 +83,30 @@
                      [(ngModel)]="code.score"
                      (ngModelChange)="setCodeChanged()">
             </mat-form-field>
-            <mat-form-field class="fx-flex-fill">
-              <mat-label>{{'code.description' | translate}}</mat-label>
-              <input matInput
-                     [placeholder]="'code.description' | translate"
-                     [(ngModel)]="code.label"
-                     (ngModelChange)="setCodeChanged()">
-            </mat-form-field>
-            @if (enableSwitchNull) {
-              <button mat-icon-button [style.width.px]="50"
-                      (click)="setCodeInvalid()"
-                      [matTooltip]="'code.make-null' | translate">
-                <mat-icon>do_not_disturb_on</mat-icon>
-              </button>
-            }
           }
-        </div>
-        <code-rules [style.padding-left.px]="4" [style.height]="'calc(100% - 60px)'"
-                    [code]="code" [fragmentMode]="fragmentMode"
-                    (codeRulesChanged)="setCodeChanged()"></code-rules>
+          @if (['RESIDUAL', 'RESIDUAL_AUTO'].includes(code.type) && (code.id !== null)) {
+            <button mat-icon-button [style.width.px]="50"
+                    (click)="setCodeInvalid()"
+                    [matTooltip]="'code.make-null' | translate">
+              <mat-icon>do_not_disturb_on</mat-icon>
+            </button>
+          }
+        }
+      </div>
+      @if (!['RESIDUAL', 'RESIDUAL_AUTO'].includes(code.type)) {
+        @if (codeModel !== 'MANUAL_ONLY') {
+          <code-rules [style.padding-left.px]="4" [style.height]="'calc(100% - 60px)'"
+                      [code]="code" [fragmentMode]="fragmentMode"
+                      (codeRulesChanged)="setCodeChanged()"></code-rules>
+        } @else if (codeModel === 'MANUAL_ONLY') {
+          <code-instruction [code]="code" (codeDataChanged)="setCodeChanged()"
+                            [style.height]="'calc(100% - 60px)'"></code-instruction>
+        }
+      }
     </div>
-    <code-instruction [code]="code" (codeDataChanged)="setCodeChanged()" class="fx-flex-fill"></code-instruction>
+    @if (codeModel === 'NONE') {
+      <code-instruction [code]="code" (codeDataChanged)="setCodeChanged()" class="fx-flex-fill"></code-instruction>
+    }
     <button mat-icon-button (click)="deleteCode(codeIndex)" [matTooltip]="'code.prompt.delete' | translate">
       <mat-icon>delete</mat-icon>
     </button>
