--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -75,28 +75,28 @@
           <mat-menu #menuNew>
             <button mat-menu-item (click)="addCode('FULL_CREDIT')">
               <mat-icon style="color: limegreen">done_all</mat-icon>
-              {{'code.prompt.add-score1' | translate}}
+              {{'code.prompt.add-FULL_CREDIT' | translate}}
             </button>
             <button mat-menu-item (click)="addCode('PARTIAL_CREDIT')">
               <mat-icon style="color: green">check</mat-icon>
-              {{'code.prompt.add-score-partial' | translate}}
+              {{'code.prompt.add-PARTIAL_CREDIT' | translate}}
             </button>
             <button mat-menu-item (click)="addCode('NO_CREDIT')">
               <mat-icon style="color: gold">remove_done</mat-icon>
-              {{'code.prompt.add-score0' | translate}}
+              {{'code.prompt.add-NO_CREDIT' | translate}}
             </button>
             <button mat-menu-item (click)="addCode('UNSET')">
               <mat-icon style="color: blue"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M424-320q0-81 14.5-116.5T500-514q41-36 62.5-62.5T584-637q0-41-27.5-68T480-732q-51 0-77.5 31T365-638l-103-44q21-64 77-111t141-47q105 0 161.5 58.5T698-641q0 50-21.5 85.5T609-475q-49 47-59.5 71.5T539-320H424Zm56 240q-33 0-56.5-23.5T400-160q0-33 23.5-56.5T480-240q33 0 56.5 23.5T560-160q0 33-23.5 56.5T480-80Z"/></svg></mat-icon>
-              {{'code.prompt.add-any' | translate}}
+              {{'code.prompt.add-UNSET' | translate}}
             </button>
             <mat-divider></mat-divider>
             <button mat-menu-item (click)="addCode('RESIDUAL')">
               <mat-icon>close</mat-icon>
-              {{'code.prompt.add-residual' | translate}}
+              {{'code.prompt.add-RESIDUAL' | translate}}
             </button>
             <button mat-menu-item (click)="addCode('RESIDUAL_AUTO')">
               <mat-icon style="color: orangered">close</mat-icon>
-              {{'code.prompt.add-residual-auto' | translate}}
+              {{'code.prompt.add-RESIDUAL_AUTO' | translate}}
             </button>
           </mat-menu>
           <button mat-icon-button (click)="smartSchemer($event)"
@@ -146,7 +146,7 @@
     @if (varCoding.codes) {
       @for (code of varCoding.codes; track code; let codeIndex = $index) {
         <single-code (codeDataChanged)="lastChangeFrom$.next('single-code codes')" [varInfo]="varInfo"
-                     [fragmentMode]="!!varCoding.fragmenting"
+                     [fragmentMode]="!!varCoding.fragmenting" [codeModel]="varCoding.codeModel"
                      [code]="code" [codeIndex]="codeIndex" [allCodes]="varCoding.codes"></single-code>
       }
       @if (varCoding.codes.length === 0) {
