Add new code type 'TO_CHECK'

--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -73,31 +73,31 @@
             </button>
           }
           <mat-menu #menuNew>
-            <button mat-menu-item (click)="addCode('FULL_CREDIT')">
-              <mat-icon style="color: limegreen">done_all</mat-icon>
-              {{'code.prompt.add-FULL_CREDIT' | translate}}
-            </button>
-            <button mat-menu-item (click)="addCode('PARTIAL_CREDIT')">
-              <mat-icon style="color: green">check</mat-icon>
-              {{'code.prompt.add-PARTIAL_CREDIT' | translate}}
-            </button>
-            <button mat-menu-item (click)="addCode('NO_CREDIT')">
-              <mat-icon style="color: gold">remove_done</mat-icon>
-              {{'code.prompt.add-NO_CREDIT' | translate}}
-            </button>
-            <button mat-menu-item (click)="addCode('UNSET')">
-              <mat-icon style="color: blue"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M424-320q0-81 14.5-116.5T500-514q41-36 62.5-62.5T584-637q0-41-27.5-68T480-732q-51 0-77.5 31T365-638l-103-44q21-64 77-111t141-47q105 0 161.5 58.5T698-641q0 50-21.5 85.5T609-475q-49 47-59.5 71.5T539-320H424Zm56 240q-33 0-56.5-23.5T400-160q0-33 23.5-56.5T480-240q33 0 56.5 23.5T560-160q0 33-23.5 56.5T480-80Z"/></svg></mat-icon>
-              {{'code.prompt.add-UNSET' | translate}}
-            </button>
-            <mat-divider></mat-divider>
-            <button mat-menu-item (click)="addCode('RESIDUAL')" [disabled]="residualExists()">
-              <mat-icon>close</mat-icon>
-              {{'code.prompt.add-RESIDUAL' | translate}}
-            </button>
-            <button mat-menu-item (click)="addCode('RESIDUAL_AUTO')" [disabled]="residualExists()">
-              <mat-icon style="color: orangered">close</mat-icon>
-              {{'code.prompt.add-RESIDUAL_AUTO' | translate}}
-            </button>
+            @for (codeType of schemerService.orderOfCodeTypes; track codeType) {
+              <button mat-menu-item (click)="addCode(codeType)">
+                @if (codeType === 'FULL_CREDIT') {
+                  <mat-icon style="color: limegreen">done_all</mat-icon>
+                } @else if (codeType === 'PARTIAL_CREDIT') {
+                  <mat-icon style="color: green">check</mat-icon>
+                } @else if (codeType === 'NO_CREDIT') {
+                  <mat-icon style="color: gold">remove_done</mat-icon>
+                } @else if (codeType === 'UNSET') {
+                  <mat-icon style="color: lightgrey">check_box_outline_blank</mat-icon>
+                } @else if (codeType === 'TO_CHECK') {
+                  <mat-icon style="color: blue"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M424-320q0-81 14.5-116.5T500-514q41-36 62.5-62.5T584-637q0-41-27.5-68T480-732q-51 0-77.5 31T365-638l-103-44q21-64 77-111t141-47q105 0 161.5 58.5T698-641q0 50-21.5 85.5T609-475q-49 47-59.5 71.5T539-320H424Zm56 240q-33 0-56.5-23.5T400-160q0-33 23.5-56.5T480-240q33 0 56.5 23.5T560-160q0 33-23.5 56.5T480-80Z"/></svg></mat-icon>
+                } @else if (codeType === 'RESIDUAL') {
+                  <mat-icon>close</mat-icon>
+                } @else if (codeType === 'RESIDUAL_AUTO') {
+                  <mat-icon style="color: orangered">close</mat-icon>
+                } @else {
+                  <div>{{'code type ' + codeType + ' unknown'}}</div>
+                }
+                {{'code.prompt.add-' + codeType | translate}}
+              </button>
+              @if (codeType === 'UNSET') {
+                <mat-divider></mat-divider>
+              }
+            }
           </mat-menu>
           <button mat-icon-button (click)="smartSchemer($event)"
                   [matTooltip]="'click.smart-schemer' | translate">
